--- a/food-care/package.json
+++ b/food-care/package.json
@@ -9,20 +9,21 @@
   "author": "Hashan",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4",
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "fcm-node": "^1.6.1",
     "firebase-admin": "^11.5.0",
+    "firebase-dynamic-links": "^1.2.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "socket.io": "^4.6.1",
     "validator": "^13.9.0"
