--- a/food-care/package.json
+++ b/food-care/package.json
@@ -4,7 +4,8 @@
   "description": "This is out mini project back-end",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Hashan",
   "license": "ISC",
